# loops-haskell

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  loops-haskell.cabal  loops.cabal  stack-ghc910.yaml  stack-ghc912.yaml  stack.yaml
.github/workflows/: format.yml  lint.yml  publish.yml  tests.yml
src/: Loops.hs  LoopsSDK.hs
src/Internal/: Loops.hs  LoopsSDK.hs
test/: LoopsSDKSpec.hs  LoopsSpec.hs
