cabal-version:      2.4
name:               loops-haskell
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Loops.so
maintainer:         dev@loops.so
category:           Web
synopsis:           Haskell SDK for Loops email platform
build-type:         Simple

library
  exposed-modules:     LoopsSDK
  other-modules:       
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base >=4.12 && <5,
      aeson >=2.0,
      bytestring,
      text,
      unordered-containers,
      http-conduit,
      http-types,
      regex-tdfa,
      case-insensitive,
      exceptions,
      transformers
  ghc-options: -Wall -O2


test-suite loopsdk-spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            LoopsSDKSpec.hs
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
  build-depends:
      base >=4.12 && <5,
      loops-haskell,
      hspec,
      aeson,
      text,
      unordered-containers,
      bytestring,
      case-insensitive
