cabal-version:      2.4
name:               loops
version:            0.2.0.0
license:            MIT
license-file:       LICENSE
author:             Familiar Publishing
maintainer:         jake@familiar.pub
category:           Web
synopsis:           Haskell SDK for Loops email platform
build-type:         Simple

library
  exposed-modules:     Loops
  other-modules:       Internal.Loops
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base >=4.12 && <5,
      aeson >=2.0,
      bytestring,
      text,
      unordered-containers,
      http-conduit,
      http-types,
      regex-tdfa,
      case-insensitive,
      exceptions,
      transformers
  build-tool-depends:
      hlint:hlint,
      fourmolu:fourmolu
  ghc-options: -Wall -O2


test-suite loopsdk-spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            LoopsSpec.hs
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
  build-depends:
      base >=4.12 && <5,
      loops,
      hspec,
      aeson,
      text,
      unordered-containers,
      bytestring,
      case-insensitive
